// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throw error with invalid config format 1`] = `
"Error: Invalid configuration file.
Failed to parse \\"<cwd>/tests_integration/cli/config/invalid/file/.prettierrc\\" as JSON, JS, or YAML.
"
`;

exports[`throw error with invalid config option (int) 1`] = `
"Error: Invalid --tab-width value.
Expected an integer, but received: 0.5
"
`;

exports[`throw error with invalid config option (trailingComma) 1`] = `
"Error: Invalid option for --trailing-comma.
Expected \\"none\\", \\"es5\\" or \\"all\\", but received: \\"wow\\"
"
`;

exports[`throw error with invalid config precedence option (configPrecedence) 1`] = `
"Error: Invalid option for --config-precedence.
Expected \\"cli-override\\", \\"file-override\\" or \\"prefer-file\\", but received: \\"option/configPrecedence\\"
"
`;

exports[`throw error with invalid config target (directory) 1`] = `
"Error: Invalid configuration file.
EISDIR: illegal operation on a directory, read
"
`;
